    * Fix QuickWhois being unreadable with some themes
    * Fix options window on OS X
    * Simplify signature mangement: the signature textbox is hidden unless
      you're using GameFOX to manage your signatures. Signatures are now stored
      only on GameFAQs by default, but no features were removed
    * Basic support for reverse ("newest first") message ordering
    * Other minor bug fixes and enhancements

2011-11-25:
    * version 0.8.4
    * GameFOX sidebar:
        - Add Vita and Wii U to platform links
        - Fix login form
    * Fix quoting bug when the Disconnect extension is installed
    * Include the signature in the character count (to be consistent with
      GameFAQs)
    * Quick editing! Edit your posts on the message list without leaving the
      page
    * Show user profiles in a box after hovering over username links
      (QuickWhois)
    * Edit history viewer on the message list: switch between different
      revisions of a post without leaving the page
    * Several small bug fixes

2011-10-31:
    * version 0.8.3
    * Fix features on message detail page (including highlighting and custom
      date formats)
    * Fix bug triggered by certain usernames that stopped GameFOX from working
    * Fix adding or updating accounts with the account manager
    * Fix GameFOX favorites being overwritten with board lists
    * Fix QuickPost error when making the last post of a page
    * Fix the new post indicator showing on the active messages list after
      editing a post

2011-10-15:
    * version 0.8.2
    * Fix message link icons CSS
    * Make the "remove side column" CSS work on more pages
    * Fix bug preventing GameFOX from working on message lists for some people
    * Re-add option to toggle the quote link
    * Re-add Ricapar's Classic CSS

2011-10-14:
    * version 0.8.1
    * Fix quoting with two-column message lists
    * Fix QuickPost appearing above page links

2011-10-14:
    * version 0.8